@startuml

title __EXCEPTION's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.common.manager {
    namespace exception {
      class pt.ulisboa.tecnico.surespace.common.manager.exception.EntityManagerException {
          {static} - serialVersionUID : long
          + EntityManagerException()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.manager {
    namespace exception {
      class pt.ulisboa.tecnico.surespace.common.manager.exception.KeyStoreManagerException {
          {static} - serialVersionUID : long
          + KeyStoreManagerException()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.manager {
    namespace exception {
      class pt.ulisboa.tecnico.surespace.common.manager.exception.LogManagerException {
          {static} - serialVersionUID : long
          + LogManagerException()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.manager {
    namespace exception {
      class pt.ulisboa.tecnico.surespace.common.manager.exception.ManagerException {
          {static} - serialVersionUID : long
          + ManagerException()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.manager {
    namespace exception {
      class pt.ulisboa.tecnico.surespace.common.manager.exception.NonceManagerException {
          {static} - serialVersionUID : long
          + NonceManagerException()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.manager {
    namespace exception {
      class pt.ulisboa.tecnico.surespace.common.manager.exception.PropertyManagerException {
          {static} - serialVersionUID : long
          + PropertyManagerException()
      }
    }
  }
  

  pt.ulisboa.tecnico.surespace.common.manager.exception.EntityManagerException -up-|> pt.ulisboa.tecnico.surespace.common.manager.exception.ManagerException
  pt.ulisboa.tecnico.surespace.common.manager.exception.KeyStoreManagerException -up-|> pt.ulisboa.tecnico.surespace.common.manager.exception.ManagerException
  pt.ulisboa.tecnico.surespace.common.manager.exception.LogManagerException -up-|> pt.ulisboa.tecnico.surespace.common.manager.exception.ManagerException
  pt.ulisboa.tecnico.surespace.common.manager.exception.ManagerException -up-|> pt.ulisboa.tecnico.surespace.common.exception.BroadException
  pt.ulisboa.tecnico.surespace.common.manager.exception.NonceManagerException -up-|> pt.ulisboa.tecnico.surespace.common.manager.exception.ManagerException
  pt.ulisboa.tecnico.surespace.common.manager.exception.PropertyManagerException -up-|> pt.ulisboa.tecnico.surespace.common.manager.exception.ManagerException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
